--- a/LiveRecordSharp/LiveRecordSharp.csproj
+++ b/LiveRecordSharp/LiveRecordSharp.csproj
@@ -61,6 +61,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
