--- a/LiveRecordSharp/LiveRecordSharp.csproj
+++ b/LiveRecordSharp/LiveRecordSharp.csproj
@@ -54,6 +54,7 @@
     <Compile Include="LiveSites\DouyuLiveSite.cs" />
     <Compile Include="LiveSites\HuomaoLiveSite.cs" />
     <Compile Include="LiveSites\LiveSite.cs" />
+    <Compile Include="LiveSites\PandaLiveSite.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
